--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "szamitosok/ask-mate",
+  "type:": "project",
   "description": "description",
   "minimum-stability": "stable",
   "license": "proprietary",
