--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,8 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !\.(css|gif|ico|jpg|js|png|swf|txt|svg|woff|ttf|eot)$
 RewriteRule . index.php [L]
+
+<Files ~ "\.json$">
+Order Allow,Deny
+Deny from All
+</Files>
